added images and logos

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav ul li{
     margin-left: auto;
     margin-right: auto;
     padding: 34px;
-    background-image: url('bg.jpg');
+    background-image: url('https://i.vgy.me/8WCXFG.jpg');
     background-size: 100% 100%;
     
     
