--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav ul li{
 
 .bottom {
     position: sticky;
-    height: 70px;
+    height: 80px;
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
@@ -80,6 +80,8 @@ input[type=range]{
     background: rgb(29, 29, 29); 
     border-radius: 10px;
     height: 5px;
+    margin-top: -10px;
+    margin-bottom: 2px;
     
 }
 
@@ -87,6 +89,8 @@ input[type=range]{
     display: flex;
     justify-content: center;
     gap: 10px; 
+    
+    
 }
 
 .blogo {
@@ -143,6 +147,7 @@ input[type=range]{
 .songInfo{
     position: absolute;
     left: 10vw;
+    padding-top: 40px;
 }
 .songInfo img{
     opacity: 0;
